fix letter spacing problem

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -13618,3 +13618,8 @@ textarea.form-control {
 .rtl .tagcloud div{
     text-align: right;
 }
+
+
+.rtl .slider-sec .item-content .text-over-slider p, .rtl .ftco-navbar-light .navbar-toggler{
+    letter-spacing: 0
+}
